# bone_tumour_classification

./: .gitignore  README.md  data.yaml  kernel-metadata.json  test_pipeline.ipynb  train_pipeline.ipynb  train_pipeline.py
bone_tumour_app/: CMakeLists.txt
bone_tumour_app/assets/: assets.qrc  report_template.html  stylesheet.qss
bone_tumour_app/include/: analysisdashboard.h  animatedstackedwidget.h  editdiagnosisdialog.h  reportinfodialog.h
bone_tumour_app/src/: analysisdashboard.cpp  analysisdashboard.h  animatedstackedwidget.cpp  bonetumourclassifier.cpp  bonetumourclassifier.h  editdiagnosisdialog.cpp  main.cpp  mainwindow.cpp  mainwindow.h  reportinfodialog.cpp
notebooks/: kernel-metadata.json  test_pipeline.ipynb
